fix navlink size and gap

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -32,8 +32,8 @@
 
 .navbar__container--expanded {
   inline-size: max(250px, 30%);
-  padding: 2rem 1rem;
-  gap: 2rem;
+  padding: 2rem;
+  gap: 4rem;
   z-index: 2;
   position: absolute;
   top: 0;
@@ -49,7 +49,11 @@
 }
 
 .navbar__menu {
-  gap: 1rem;
+  gap: 2rem;
+}
+
+.navbar__link {
+  font-size: var(--md);
 }
 
 @media screen and (min-width: 920px) {
@@ -73,6 +77,7 @@
   }
 
   .navbar__link {
+    font-size: var(--sm);
     color: var(--darkgray);
     transition: all 0.2s ease-out;
   }
